# black configuration
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line_length = 79
skip_string_normalization = true
target_version = ["py311"]

[tool.poetry]
name = "fastapiwebsockets"
version = "0.1.0"
description = ""
authors = ["NeverWalkAloner <neverwalkaloner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
psycopg2 = "^2.9.5"
alembic = "^1.8.1"
aiohttp = "^3.8.3"
pytest = "^7.2.0"
SQLAlchemy-Utils = "^0.38.3"
websockets = "^10.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.1"}
greenlet = "^2.0.1"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.10.4"}
asyncpg = "^0.27.0"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"
black = "^22.12.0"
isort = "^5.11.4"
cryptography = "^39.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
